<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.travelbuddy.travelbuddy.Account"
    android:background="@color/back">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:focusableInTouchMode="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/gotofeed"
                android:layout_marginBottom="5dp"
                android:src="@drawable/ic_chevron_left"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <customfonts.MyTextView_Roboto_Medium
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/user"
                android:textSize="30sp"
                android:layout_weight="1"
                android:textColor="@android:color/black"
                android:textStyle="bold"/>


            <!--Circle Image view library used-->

            <de.hdodenhof.circleimageview.CircleImageView
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/post_profile_image"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/farhan"
                android:layout_marginStart="7dp"
                android:layout_gravity="center"
                android:layout_marginEnd="7dp"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <customfonts.MyTextView_Roboto_Bold
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/postno"
                    android:textColor="@android:color/black"
                    android:textStyle="bold"
                    android:textSize="20sp"/>

                <customfonts.MyTextView_Roboto_Medium
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/posts"
                    android:textColor="@android:color/darker_gray"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginStart="40dp"
                android:gravity="center">

                <customfonts.MyTextView_Roboto_Bold
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/followersno"
                    android:textColor="@android:color/black"
                    android:textStyle="bold"
                    android:textSize="20sp"/>

                <customfonts.MyTextView_Roboto_Medium
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/followers"
                    android:textColor="@android:color/darker_gray"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginStart="40dp"
                android:gravity="center">

                <customfonts.MyTextView_Roboto_Bold
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/followingno"
                    android:textColor="@android:color/black"
                    android:textStyle="bold"
                    android:textSize="20sp"/>

                <customfonts.MyTextView_Roboto_Medium
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/following"
                    android:textColor="@android:color/darker_gray"/>

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="15dp">

            <customfonts.MyTextView_Roboto_Regular
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/send"
                android:textColor="@android:color/white"
                android:background="@drawable/round"
                android:textSize="15sp"
                android:padding="6dp"
                android:paddingStart="60dp"
                android:paddingEnd="60dp"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@drawable/round2"
                android:padding="8dp"
                android:layout_marginStart="15dp"
                android:paddingStart="25dp"
                android:layout_gravity="center"
                android:paddingEnd="25dp">

                <ImageView
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_profile_black"/>

                <ImageView
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:src="@drawable/ic_check"
                    android:layout_marginStart="5dp"/>

            </LinearLayout>



            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_arrow_drop_down"
                android:layout_gravity="center"
                android:background="@drawable/round2"
                android:padding="10dp"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:layout_marginStart="15dp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dp"
            android:orientation="horizontal">

        <customfonts.MyTextView_Roboto_Medium
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user"
            android:textSize="15sp"
            android:textColor="@android:color/black"/>

            <ImageView
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:src="@drawable/ic_icons8_verified_account_filled_100"
                android:layout_gravity="center"
                android:layout_marginStart="10dp" />

        </LinearLayout>

        <customfonts.MyTextView_Roboto_Regular
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fashion"
            android:textSize="15sp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@color/apptool"
            android:layout_marginBottom="60dp"
            android:layout_marginTop="13dp">

            <include layout="@layout/middle_bar"/>

            <!--Recycler can be used-->

            <android.support.v7.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/accountrecy"
                android:layout_marginStart="2dp"
                android:clipToPadding="false"
                android:paddingTop="2dp"
                android:nestedScrollingEnabled="false"/>

        </LinearLayout>

    </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

    <include layout="@layout/bottom_toolbar"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


</RelativeLayout>
